--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         padding: 0;
         width: 100%;
         overflow-x: hidden;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
       ::selection {
         background-color: #99f6e4;
         color: #0f766e;
       }
-      /* Subtle noise texture overlay */
+      /* Optimized noise texture */
       .noise-bg::before {
         content: "";
         position: fixed;
@@ -38,10 +40,11 @@
         left: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.02;
+        opacity: 0.015;
         pointer-events: none;
-        background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"%3E%3Cfilter id="noiseFilter"%3E%3CfeTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/%3E%3C/filter%3E%3Crect width="100%25" height="100%25" filter="url(%23noiseFilter)"/%3E%3C/svg%3E');
+        background-image: url('https://grainy-gradients.vercel.app/noise.svg');
         z-index: 5;
+        will-change: transform;
       }
       .mesh-gradient {
         position: fixed;
@@ -49,54 +52,62 @@
         z-index: -1;
         background-color: #f8fafc;
         background-image: 
-          radial-gradient(at 0% 0%, rgba(153, 246, 228, 0.15) 0px, transparent 50%),
-          radial-gradient(at 100% 0%, rgba(186, 230, 253, 0.15) 0px, transparent 50%),
-          radial-gradient(at 100% 100%, rgba(254, 240, 138, 0.1) 0px, transparent 50%),
-          radial-gradient(at 0% 100%, rgba(153, 246, 228, 0.1) 0px, transparent 50%);
-        filter: blur(40px);
-        animation: mesh-float 20s ease-in-out infinite alternate;
+          radial-gradient(at 0% 0%, rgba(153, 246, 228, 0.12) 0px, transparent 50%),
+          radial-gradient(at 100% 0%, rgba(186, 230, 253, 0.12) 0px, transparent 50%),
+          radial-gradient(at 100% 100%, rgba(254, 240, 138, 0.08) 0px, transparent 50%),
+          radial-gradient(at 0% 100%, rgba(153, 246, 228, 0.08) 0px, transparent 50%);
+        filter: blur(60px);
+        transform: translate3d(0,0,0);
+        will-change: transform;
+        animation: mesh-float 25s ease-in-out infinite alternate;
       }
       
       @keyframes mesh-float {
-        0% { transform: scale(1) translate(0, 0); }
-        50% { transform: scale(1.1) translate(2%, 2%); }
-        100% { transform: scale(1) translate(-2%, 1%); }
+        0% { transform: scale(1) translate3d(0, 0, 0); }
+        50% { transform: scale(1.05) translate3d(1%, 1%, 0); }
+        100% { transform: scale(1) translate3d(-1%, 0.5%, 0); }
       }
 
       .section-surface {
         background: var(--surface-bg);
         border: 1px solid rgba(226, 232, 240, 0.6);
         box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.01);
+        transform: translate3d(0,0,0);
+        will-change: transform, opacity;
       }
       .elevated-card {
         background: var(--card-bg);
         border: 1px solid rgba(20, 184, 166, 0.1);
         box-shadow: var(--card-shadow);
-        transition: all 0.5s cubic-bezier(0.22, 1, 0.36, 1);
+        transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1), 
+                    box-shadow 0.4s cubic-bezier(0.22, 1, 0.36, 1), 
+                    border-color 0.4s cubic-bezier(0.22, 1, 0.36, 1);
+        will-change: transform, box-shadow;
       }
       .elevated-card:hover {
         border-color: rgba(20, 184, 166, 0.45);
         box-shadow: 
           var(--card-shadow-hover),
-          0 0 25px -5px rgba(20, 184, 166, 0.25);
-        transform: translateY(-6px);
+          0 0 25px -5px rgba(20, 184, 166, 0.15);
+        transform: translateY(-4px);
       }
       .glass-effect {
         background: rgba(255, 255, 255, 0.85);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         border: 1px solid rgba(255, 255, 255, 0.5);
       }
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
-        width: 6px;
+        width: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: transparent;
+        background: #f1f5f9;
       }
       ::-webkit-scrollbar-thumb {
         background: #cbd5e1;
         border-radius: 10px;
+        border: 2px solid #f1f5f9;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8;
